# Chess

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.c
include/: attack_generator.hpp  bitboard.hpp  board.hpp  chess_gui.hpp  config.hpp  engine.hpp  events.hpp  magic_bitboard.hpp  move.hpp  movegen.hpp  perft.hpp  piece.hpp  position.hpp  sound_manager.hpp  texture_loader.hpp  types.hpp
src/: attack_generator.cpp  bitboard.cpp  board.cpp  chess_gui.cpp  engine.cpp  events.cpp  magic_bitboard.cpp  main.cpp  movegen.cpp  perft.cpp  piece.cpp  position.cpp  sound_manager.cpp  texture_loader.cpp
